apps/clubs/calidum-rotae/base/email-provider/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-provider
  annotations:
    kube-score/ignore: pod-networkpolicy, pod-probes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: email-provider
  template:
    metadata:
      labels:
        app: email-provider
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - email-provider
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: email-provider
          image: ghcr.io/clubcedille/email-provider:1.0.2
          imagePullPolicy: Always
          command:
            ['/bin/sh', '-c', '/email_provider --port 4000']
          ports:
            - containerPort: 4000
          livenessProbe:
            tcpSocket:
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
              ephemeral-storage: 256Mi
            limits:
              cpu: 500m
              memory: 256Mi
              ephemeral-storage: 1Gi
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            readOnlyRootFilesystem: true
